destaque da semana implementado

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <app-carrousel></app-carrousel>
-  <app-carrousel></app-carrousel>
-  <app-carrousel></app-carrousel>
+  <app-carrousel titulo="Filmes Populares" ></app-carrousel>
+  <app-filmes-assistidos></app-filmes-assistidos>
+  <app-destaques></app-destaques>
 </section>
