--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,4 +2,8 @@
   <app-carrousel titulo="Filmes Populares" ></app-carrousel>
   <app-filmes-assistidos></app-filmes-assistidos>
   <app-destaques></app-destaques>
+  <app-destaques></app-destaques>
+  <app-destaques></app-destaques>
+  <app-destaques></app-destaques>
+  <app-destaques></app-destaques>
 </section>
